cleaned up file structure. confirmed all paths are correct. LD 02272023 14:56 PST

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,9 @@
-<html>
+<html lang="en">
+  <head>
+    <title>FlowSpace</title>
+  </head>
   <body>
     <div id="root"></div>
   </body>
 </html>
+
