--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlowSpace</title>
   </head>
   <body>
